# cpp-cellular-automata

./: AppLog.h  CMakeLists.txt  Cell.cpp  Cell.h  CellRule.cpp  CellRule.h  Controls.cpp  Controls.h  Cursor.cpp  Cursor.h  Grid.cpp  Grid.h  OverflowArray.h  README.md  RLEREadResult.h  RLE_Coder.h  ThreadPool.h  Timer.h  WorldMember.cpp  WorldMember.h  hlife.h  main.cpp
Headers/: AppLog.h  Cell.h  CellRule.h  Controls.h  Cursor.h  Point.h  RLE_Coder.h  ThreadPool.h  WorldMember.h  hlife.h
Source/: CellRule.cpp  Controls.cpp  Grid.cpp  WorldMember.cpp  main.cpp
imgui/: imfilebrowser.h
patterns/: adjustable-Corder-lineship.rle  jellyfish.rle
